Test websocket handshake

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <head>
-  <link href="public/style.css" rel="stylesheet">
+  <link href="./style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -19,3 +19,14 @@
     <button class="square"></button>
   </div>
 </body>
+
+<script>
+ const ws = new WebSocket('ws://localhost:9898/');
+ ws.onopen = function() {
+     console.log('WebSocket Client Connected');
+     ws.send('Hi this is web client.');
+ };
+ ws.onmessage = function(e) {
+     console.log("Received: '" + e.data + "'");
+ };
+</script>
