--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,14 @@
 </head>
 
 <body>
+<!--
   <div class="row">
     <button class="square" id="0"></button>
     <button class="square" id="1"></button>
     <button class="square" id="2"></button>
   </div>
   <div class="row">
-    <button class="square" id="3"></button>
+    <button class="square" id="3">O</button>
     <button class="square" id="4"></button>
     <button class="square" id="5"></button>
   </div>    
@@ -18,23 +19,19 @@
     <button class="square" id="7"></button>
     <button class="square" id="8"></button>
   </div>
+  </br>
+  <div>
+    <form method="get">
+    <label>Name</label>
+    <input></input>
+    <label>Room Number</label>
+    <input type="text"></input>
+    <button>Join Room</button>
+    </form>
+  </div>
+  -->
+  <div id="root"></div>
 </body>
 
-<script>
- const ws = new WebSocket('ws://localhost:9898/');
- ws.onopen = function() {
-     console.log('WebSocket Client Connected');
-     // ws.send('Hi this is web client.');
- };
- // ws.onmessage = function(e) {
- //     console.log("Received: '" + e.data + "'");
-  // };
+<script src="./tictactoe.js"></script>
 
-  let buttons = document.getElementsByTagName('button');
-  for (let i = 0; i < buttons.length; i++) {
-    buttons[i].addEventListener('click', () => {
-      ws.send('client clicked ' + buttons[i].id);
-    });
-  }
-  
-</script>
