Prompt client for username and room and send data to server.

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     </form>
   </div>
   -->
-  <div id="root"></div>
+  <div id="board"></div>
 </body>
 
 <script src="./tictactoe.js"></script>
