Render updated board and status.

--- a/public/index.html
+++ b/public/index.html
@@ -3,34 +3,8 @@
 </head>
 
 <body>
-<!--
-  <div class="row">
-    <button class="square" id="0"></button>
-    <button class="square" id="1"></button>
-    <button class="square" id="2"></button>
-  </div>
-  <div class="row">
-    <button class="square" id="3">O</button>
-    <button class="square" id="4"></button>
-    <button class="square" id="5"></button>
-  </div>    
-  <div class="row">
-    <button class="square" id="6"></button>
-    <button class="square" id="7"></button>
-    <button class="square" id="8"></button>
-  </div>
-  </br>
-  <div>
-    <form method="get">
-    <label>Name</label>
-    <input></input>
-    <label>Room Number</label>
-    <input type="text"></input>
-    <button>Join Room</button>
-    </form>
-  </div>
-  -->
   <div id="board"></div>
+  <div id="status"></div>
 </body>
 
 <script src="./tictactoe.js"></script>
