Replace prompt with modal window.

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,13 @@
   <div id="room"></div>
   <div id="mark"></div>
   <div id="status"></div>
+
+  <div class="modal-bg">
+    <div class="modal-content">
+      <input type="text" placeholder="Choose room (a number)">
+      <button id="roomButton">Go!</button>
+    </div>
+  </div>
 </body>
 
 <script src="./tictactoe.js"></script>
