Hit enter to join room.

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
   <div class="modal-bg">
     <div class="modal-content">
-      <input type="text" placeholder="Choose room (a number)">
+      <input autofocus="true" type="text" placeholder="Choose room (a number)">
       <button id="roomButton">Go!</button>
     </div>
   </div>
