In case of error, re-prompt using modal popup.

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <div class="modal-content">
       <input autofocus="true" type="text" placeholder="Choose room (a number)">
       <button id="roomButton">Go!</button>
+      <div id="error-message"></div>
     </div>
   </div>
 </body>
