Improve http server.

--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,5 @@
   </div>
 </body>
 
-<script src="/modules/functions.js"></script>
+<script src="./modules/functions.js"></script>
 <script src="./tictactoe.js"></script>
